# shiki

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  release.yml
docs/: API.md  CONFIGURATION.md  DESIGN.md  SPECIFICATION.md  SYSTEMD_INTEGRATION.md
docs/examples/: config.example.yaml  config.exec.example.yaml
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/client/: api.rs  mod.rs
src/config/: acl.rs  agent.rs  cluster.rs  logging.rs  mod.rs  retry.rs  server.rs
src/server/: handlers.rs  handlers_tests.rs  mod.rs  response.rs  state.rs
src/service/: backend.rs  exec.rs  exec_tests.rs  mod.rs  systemd.rs
